--- a/src/__eShopCabinet.pug
+++ b/src/__eShopCabinet.pug
@@ -3,9 +3,9 @@ mixin cabinet2
     .cabinet2__outer.w1
       .title.title_flex
         h1= pageTitle
-        a.profil2__exit(href="", title="Выйти")
-          span Выйти
-          i.icon-exit
+        //- a.profil2__exit(href="", title="Выйти")
+        //-   span Выйти
+        //-   i.icon-exit
       .cab2__tabsArea
         ul.cab2__tabs
           li.cab2__tab
