--- a/src/__eShopCartPage.pug
+++ b/src/__eShopCartPage.pug
@@ -25,8 +25,8 @@ mixin eShopCart
             a(href="#").eShopCart__title
               span Название товара в несколько слов
               span 	J865L-1-3	3
-            .eShopCart__title__desc 
-              span Размер 32
+            //- .eShopCart__title__desc 
+            //-   span Размер 32
             .eShopCart__itemButtons
               .eShopCart__number.number.number_inTab(data-wareid='xxx', data-mode='qcont')
                 span.minus_tab(data-wareid='xxx', data-change='-1', title='Уменьшить количество') 
@@ -48,8 +48,8 @@ mixin eShopCart
             a(href="#").eShopCart__title
               span Название товара в несколько слов
               span 	J865L-1-3	3
-            .eShopCart__title__desc 
-              span Размер 32
+            //- .eShopCart__title__desc 
+            //-   span Размер 32
             .eShopCart__itemButtons
               .eShopCart__number.number.number_inTab(data-wareid='xxx', data-mode='qcont')
                 span.minus_tab(data-wareid='xxx', data-change='-1', title='Уменьшить количество') 
@@ -75,17 +75,7 @@ mixin order
   .orderForm__wrapper
     h2 Оформление заказа
     form.orderForm__area(action='#')
-      .inputBox
-        label(for='formGroupExampleInput') Ваше имя
-        input#formGroupExampleInput(type='text', placeholder='')
-      .inputBox
-        label(for='formGroupExampleInput2') Ваш телефон
-        input#formGroupExampleInput2(type='text', placeholder='')
-      .inputBox
-        label(for='formGroupExampleInput3') Ваш email
-        input#formGroupExampleInput3(type='text', placeholder='')
       h3 Варианты доставки:
-
       .radioBox__wrapper
         .radioBox
           input#customRadio1(type='radio', name='customRadio')
@@ -93,6 +83,34 @@ mixin order
         .radioBox
           input#customRadio2(type='radio', name='customRadio')
           label(for='customRadio2') Доставка
+      .inputBox
+        label(for='formGroupExampleInput_f') Ваша фамилия *
+        input#formGroupExampleInput_f(type='text', placeholder='')
+      .inputBox
+        label(for='formGroupExampleInput_i') Ваше имя *
+        input#formGroupExampleInput_i(type='text', placeholder='')
+      .inputBox
+        label(for='formGroupExampleInput_o') Ваше отчество *
+        input#formGroupExampleInput_o(type='text', placeholder='')
+      .inputBox
+        label(for='formGroupExampleInput2') Ваш телефон *
+        input#formGroupExampleInput2(type='text', placeholder='')
+      .inputBox
+        label(for='formGroupExampleInput3') Ваш email *
+        input#formGroupExampleInput3(type='text', placeholder='')
+      .inputBox
+        label(for='formGroupExampleInput_town') Укажите Ваш город *
+        input#formGroupExampleInput_town(type='text', placeholder='')
+      .inputBox
+        label(for='formGroupExampleInput_street') Укажите улицу *
+        input#formGroupExampleInput_street(type='text', placeholder='')
+      .inputBox
+        label(for='formGroupExampleInput_house') Укажите номер дома *
+        input#formGroupExampleInput_house(type='text', placeholder='')
+      .inputBox
+        label(for='formGroupExampleInput_room') Номер квартиры
+        input#formGroupExampleInput_room(type='text', placeholder='')
+      
       h3 Варианты оплаты:
       .radioBox__wrapper
         .radioBox
