--- a/src/__header3.pug
+++ b/src/__header3.pug
@@ -67,12 +67,12 @@ mixin header3
       .eShop__headerIcon
         a.eShop__headerFav.topSearch_JS(href="")
           i.icon-search2
-        a.eShop__headerFav(href="")
-          i.icon-eheart1.hederIconNoFav
-          i.icon-eheart1.hederIconInFav
-        a.header__cart(href="")
-          i.icon-shopping-cart
-          span 12
+        //- a.eShop__headerFav(href="")
+        //-   i.icon-eheart1.hederIconNoFav
+        //-   i.icon-eheart1.hederIconInFav
+        //- a.header__cart(href="")
+        //-   i.icon-shopping-cart
+        //-   span 12
         .header3__menuBtn.header2__menuBtn_js(data-id="menu1")
           i.icon-emenu1
         
