--- a/src/assets/css/__eShopCabinet.css
+++ b/src/assets/css/__eShopCabinet.css
@@ -104,6 +104,7 @@ a.cab2__tabTitle {
   transition: all 0.3s;
   height: 100%;
   color: #000;
+  box-shadow: 0px 10px 8px -5px rgba(0, 0, 0, 0.08);
 }
 
 a.order2,
@@ -114,6 +115,7 @@ a.order2:focus {
 
 .order2:hover {
   background: var(--colorLightGrey);
+  box-shadow: 0px 10px 8px -5px rgba(196, 187, 234, 0.45);
 }
 
 .order2__left {
