--- a/src/assets/css/__eShopOrderDetails.css
+++ b/src/assets/css/__eShopOrderDetails.css
@@ -216,25 +216,37 @@ form.orderDetails2__form {
 }
 
 .orderDetails2__btn {
+  border-radius: 6px;
+  width: 100%;
+  max-width: 300px;
+  height: 56px;
   display: flex;
   justify-content: center;
   align-items: center;
-  padding: 10px 20px;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 20px;
+  color: #ffffff;
+  background: var(--brick);
   cursor: pointer;
-  font-size: 1rem;
-  width: 100%;
+  transition: all 0.3s;
   border: none;
   outline: none;
+  transition: all 0.3s;
+  margin-left: auto;
 }
 
-.orderDetails2__btn_btn1 {
-  background: var(--orange);
-  color: #fff;
+.orderDetails2__btn_btn1:hover {
+  background: var(--reden);
 }
 
 .orderDetails2__btn_btn2 {
   background: #e5e5e5;
   color: #000;
+}
+.orderDetails2__btn_btn2:hover {
+  background: var(--reden);
+  color: #fff;
 }
 
 .orderDetails2__orderText {
