--- a/src/eShopCatalog.pug
+++ b/src/eShopCatalog.pug
@@ -77,7 +77,7 @@ body
               span 256
       .split 
         .split__left 
-          +eShopMenu
+          +eShopMenuCatalogOnly
           +eFilterArea
         .split__right
           .eCatalog
