--- a/src/__eShopMenu.pug
+++ b/src/__eShopMenu.pug
@@ -249,3 +249,221 @@ mixin eShopMenu
           a(href="")
             span Запись на прием
             span 
+
+
+mixin eShopMenuCatalogOnly
+  .eShopMenu__mobileBtn Каталог
+  nav.eShopMenu__outer 
+    ul.eShopMenu
+      li.lev1
+        .esli_inner
+          a.hasInner(href="")
+            span Лицо
+            span 186
+          .openInner
+        ul
+          li.lev3
+            .esli_inner
+              a.hasInner(href="") 
+                span Уход
+                span 
+          li.lev3
+            .esli_inner
+              a.hasInner(href="")
+                span Уход
+                span 
+          li.lev3
+            .esli_inner
+              a.hasInner(href="")
+                span Уход
+                span 
+          li.lev3
+            .esli_inner
+              a.hasInner(href="")
+                span Уход
+                span 
+      li.lev1.active
+        .esli_inner
+          a.hasInner(href="")
+            span Волосы
+            span 152
+          .openInner
+        ul
+          li.lev2.active
+            .esli_inner
+              a.hasInner(href="")
+                span Стайлинг и окрашивание 
+                span 18
+              .openInner
+            ul
+              li.lev3
+                .esli_inner
+                  a(href="")
+                    span Воски
+                    span 22
+              li.lev3
+                .esli_inner
+                  a(href="")
+                    span Гели
+                    span 33
+              li.lev3
+                .esli_inner
+                  a(href="")
+                    span Краска для волос
+                    span 33
+              li.lev3.active
+                .esli_inner
+                  a(href="")
+                    span Кремы
+                    span 
+              li.lev3
+                .esli_inner
+                  a(href="")
+                    span Лаки для волос
+                    span 33
+              li.lev3
+                .esli_inner
+                  a(href="")
+                    span Лосьоны
+                    span 33
+              li.lev3
+                .esli_inner
+                  a(href="")
+                    span Масла
+                    span 33
+              li.lev3
+                .esli_inner
+                  a(href="")
+                    span Гели
+                    span 33
+          li.lev2
+            .esli_inner
+              a(href="")
+                span Уход
+                span 
+              .openInner
+            ul
+              li.lev3
+                .esli_inner
+                  a(href="")
+                    span Уход первый
+                    span 
+      li.lev1
+        .esli_inner
+          a.hasInner(href="")
+            span Тело 
+            span 
+          .openInner
+        ul
+          li.lev3
+            .esli_inner
+              a(href="")
+                span Тело 1
+                span 
+          li.lev3
+            .esli_inner
+              a(href="")
+                span Тело 1
+                span 
+          li.lev3
+            .esli_inner
+              a(href="")
+                span Тело 1
+                span 
+          li.lev3
+            .esli_inner
+              a(href="")
+                span Тело 1
+                span 
+          li.lev3
+            .esli_inner
+              a(href="")
+                span Тело 1
+                span 
+          li.lev3
+            .esli_inner
+              a(href="")
+                span Тело 1
+                span 
+      li.lev1
+        .esli_inner
+          a.hasInner(href="")
+            span Ногти
+            span 
+          .openInner
+        ul
+          li.lev3
+            .esli_inner
+              a(href="")
+                span Уход за ногтями
+                span 
+      li.lev1
+        .esli_inner
+          a.hasInner(href="")
+            span Макияж
+            span 
+          .openInner
+        ul
+          li.lev3
+            .esli_inner
+              a(href="")
+                span Макияж вечерний
+                span 
+          li.lev3
+            .esli_inner
+              a(href="")
+                span Макияж дневной
+                span 
+          li.lev3
+            .esli_inner
+              a(href="")
+                span Макияж повседневный
+                span 
+          li.lev3
+            .esli_inner
+              a(href="")
+                span Макияж свадебный
+                span 
+          li.lev3
+            .esli_inner
+              a(href="")
+                span Макияж ретро
+                span 
+          li.lev3
+            .esli_inner
+              a(href="")
+                span Макияж праздничный
+                span 
+          li.lev3
+            .esli_inner
+              a(href="")
+                span Макияж туристический
+                span 
+      li.lev1
+        .esli_inner
+          a(href="")
+            span Мужчинам
+            span 
+      li.lev1
+        .esli_inner
+          a.hasInner(href="")
+            span Подарочные сертификаты
+            span 
+          .openInner
+        ul
+          li.lev2
+            .esli_inner
+              a(href="")
+                span 10000 р
+                span 
+          li.lev2
+            .esli_inner
+              a(href="")
+                span 20000 р
+                span 
+          li.lev2
+            .esli_inner
+              a(href="")
+                span 30000 р
+                span 
+      
