--- a/src/assets/css/__footer3_media.css
+++ b/src/assets/css/__footer3_media.css
@@ -41,6 +41,13 @@
     flex-direction: column;
     padding: 20px 0 0 0;
   }
+  .oferta {
+    margin-bottom: 10px;
+    font-size: 12px;
+  }
+  a.policy1 {
+    font-size: 12px;
+  }
 }
 
 @media only screen and (max-width: 600px) {
