--- a/src/eShopCatalogFloat.pug
+++ b/src/eShopCatalogFloat.pug
@@ -1,4 +1,4 @@
-- var pageTitle = 'Страница одного бренда'
+- var pageTitle = 'Каталог товаров'
 - var seoKeywords = 'Ключевые слова для страницы'
 - var seoDesc = 'Сео описание для страницы'
 
@@ -7,7 +7,7 @@ include __card
 include __header3
 include __menu
 include __eShopMenu
-include __eShopCatalog
+include __eShopCatalogFloat
 include __eFilter
 include __eFilterMobile
 include __pagination
@@ -22,7 +22,7 @@ include __forms
 include __footer
 include __menuBottom1
 
-include __brandPage
+
 
 
 <!DOCTYPE html>
@@ -38,18 +38,14 @@ body
   .site__center
     +breadcrumbs3
 
-    +brandIntro
-
-    .split__area
-      .split_top
-        //- .split__wide
+    .floatBox__area 
+      .floatBox.clearfix 
         .eBrands__area
           .eBrands__overlay 
           .eBrands__btn Бренды
           .eBrands__content
             .eBrands__contentInner.eBrands__contentInner_scroll
               +brands
-
         .eGreyLine__mbBtnSortOuter
           .eGreyLine__mbBtnSort
             span Сортировать по
@@ -77,11 +73,10 @@ body
             .searchResult__counter 
               span Найдено товаров:
               span 256
-      .split 
-        .split__left 
+        .floatBox__left 
           +eShopMenuCatalogOnly
           +eFilterArea
-        .split__right
+        .floatBox__right
           .eCatalog
             +eCatalog
             +pagiantion
