--- a/src/eShopCatalogFloat.pug
+++ b/src/eShopCatalogFloat.pug
@@ -74,6 +74,7 @@ body
               span Найдено товаров:
               span 256
         .floatBox__left 
+          .floatBox__leftOverlay
           +eShopMenuCatalogOnly
           +eFilterArea
         .floatBox__right
