--- a/src/assets/css/__eShopMenu.css
+++ b/src/assets/css/__eShopMenu.css
@@ -1,15 +1,50 @@
 .eShopMenu__mobileBtn {
   display: none;
+  width: 100%;
+  height: 42px;
+  background: #f4e9f6;
+  border-radius: 4px;
+  justify-content: center;
+  align-items: center;
+  font-weight: 600;
+  font-size: 14px;
+  line-height: 20px;
+  color: #a04faf;
+  cursor: pointer;
+}
+.eShopMenu__mobileBtn {
+  display: none;
+  width: 100%;
+  height: 42px;
+  /* background: #f4e9f6; */
+  background: #f6e5e4;
+  border-radius: 4px;
+  justify-content: center;
+  align-items: center;
+  font-weight: 600;
+  font-size: 14px;
+  line-height: 20px;
+  color: var(--brick);
+  cursor: pointer;
+  position: relative;
+}
+
+.eShopMenu__mobileBtn_active {
+  z-index: 2100;
 }
 
 .eShopMenu__outer100 {
   width: 100%;
 }
 
+/* .eShopMenu__outer_scroll {
+  max-height: calc(60vh - 150px);
+  overflow-y: scroll;
+} */
+
 .eShopMenu {
   display: flex;
   flex-direction: column;
-
   border-top: 1px solid #e0e0e0;
   width: 100%;
 }
