--- a/src/__eShopMenu.pug
+++ b/src/__eShopMenu.pug
@@ -255,7 +255,7 @@ mixin eShopMenuCatalogOnly
   //- .eShopMenu__mobileBtnOuter
   .eShopMenu__mobileBtn Каталог
   nav.eShopMenu__outer_catalogOnly
-    ul.eShopMenu.eShopMenu__scroll
+    ul.eShopMenu.eShopMenu__scroll.xScroll2
       li.lev1
         .esli_inner
           a.hasInner(href="")
@@ -468,3 +468,5 @@ mixin eShopMenuCatalogOnly
                 span 30000 р
                 span 
       
+
+
