--- a/src/__header3.pug
+++ b/src/__header3.pug
@@ -73,7 +73,9 @@ mixin header3
         //- a.header__cart(href="")
         //-   i.icon-shopping-cart
         //-   span 12
-        .header3__menuBtn.header2__menuBtn_js(data-id="menu1")
+        
+        //- .header3__menuBtn.header2__menuBtn_js(data-id="menu1")
+        .header3__menuBtn.leftSlideMenu_js(data-id="menu1")
           i.icon-emenu1
         
 
