--- a/src/eShopCatalogFloat.pug
+++ b/src/eShopCatalogFloat.pug
@@ -8,6 +8,7 @@ include __header3
 include __menu
 include __eShopMenu
 include __eShopCatalogFloat
+include __eShopSlideLeftMenu
 include __eFilter
 include __eFilterMobile
 include __pagination
@@ -91,6 +92,8 @@ body
 
   +topMenuAdaptive
   +search1
+
+  +leftSlideMenu
 
   +toUp
   
