--- a/src/assets/css/__card.css
+++ b/src/assets/css/__card.css
@@ -197,7 +197,7 @@
 
 .innerPriceBox3 {
   width: 50%;
-  padding: 30px;
+  padding: 50px 20px 50px 100px;
   position: relative;
   display: none;
 }
@@ -216,10 +216,12 @@
 
 .innerPriceBox3__title {
   font-size: 2rem;
-  color: var(--brick);
-  font-weight: 700;
   line-height: 1.4;
   margin: 0;
+
+  font-weight: 800;
+  font-size: 32px;
+  color: #333333;
 }
 
 .innerPriceBox3__close {
@@ -237,7 +239,7 @@
   width: 100%;
   display: flex;
   flex-wrap: wrap;
-  padding: 0 5px 0 0;
+  padding: 0 70px 0 0;
   max-height: 60vh;
 }
 
