--- a/src/assets/css/__eShopMenu.css
+++ b/src/assets/css/__eShopMenu.css
@@ -45,7 +45,7 @@
 .eShopMenu {
   display: flex;
   flex-direction: column;
-  border-top: 1px solid #e0e0e0;
+  /* border-top: 1px solid #e0e0e0; */
   width: 100%;
 }
 
