--- a/src/assets/css/__eShopMenu_media.css
+++ b/src/assets/css/__eShopMenu_media.css
@@ -22,8 +22,7 @@
     left: 10px;
     top: 40px;
     z-index: 2095;
-    padding: 20px 0 20px 10px;
-
+    padding: 20px 5px 20px 10px;
     background: #fff;
     border: 1px solid #cecbda;
     box-sizing: border-box;
@@ -36,7 +35,7 @@
   .eShopMenu__scroll {
     max-height: calc(60vh - 150px);
     overflow-y: scroll;
-    padding: 0 15px 0 0;
+    padding: 0 10px 0 0;
   }
   .eFilter__area {
     display: none;
