--- a/src/assets/css/__mainTop2.css
+++ b/src/assets/css/__mainTop2.css
@@ -232,7 +232,7 @@
 
 .mainTop__hideBoxInner {
   max-height: 100%;
-  padding: 20px;
+  padding: 15px 10px 15px 15px;
   display: flex;
   flex-direction: column;
   /* max-height: 90%; */
