--- a/src/procedure3.pug
+++ b/src/procedure3.pug
@@ -72,8 +72,11 @@ body
           
           .videoPhotoBox
             .videoPhotoBox__video
-              .videoPhotoBox__videoItem.videoBox_i
-                iframe(width='560' height='315' src='https://www.youtube.com/embed/YCF6qjf1-h8' autoplay='1' frameborder='0' allow='accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture' allowfullscreen='')
+              .videoPhotoBox__photoItem
+                  a(href="assets/img/before-after/05.jpg" data-fancybox="group2" data-caption="002" style="background-image: url(assets/img/before-after/05.jpg)")
+              
+              //- .videoPhotoBox__videoItem.videoBox_i
+              //-   iframe(width='560' height='315' src='https://www.youtube.com/embed/YCF6qjf1-h8' autoplay='1' frameborder='0' allow='accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture' allowfullscreen='')
             .videoPhotoBox__photo
               .videoPhotoBox__photoItemOuter
                 .videoPhotoBox__photoItem
