--- a/src/__breadcrumbs.pug
+++ b/src/__breadcrumbs.pug
@@ -32,3 +32,22 @@ mixin backBtnOnly
     .backBtn3 
       i.icon-leftss2
       span Назад
+
+
+mixin breadcrumbs4
+  .breadcrumbs3__area.w0
+    .breadcrumbs3__wrapper
+      .backBtn4__outer
+        .backBtn3 
+          i.icon-leftss2
+          span Назад
+      .breadcrumbs3.w1
+        div
+          a(href='#') Главная 
+        |           /
+        div
+          a(href='#') Категория 
+        |           /
+        div
+          span Текущий пункт
+      
