--- a/src/__forms.pug
+++ b/src/__forms.pug
@@ -129,7 +129,8 @@ mixin formInMaster3
         input.checkbox_mf3(type='checkbox' required='')
         span Согласен на обработку персональных данных
       button.submit_mf3(type='submit', name='submit_mf3')
-        | Записаться
+        i.icon-diamond
+        span Записаться
 
 
 mixin formCallBack
