--- a/src/assets/css/__master.css
+++ b/src/assets/css/__master.css
@@ -59,11 +59,13 @@
 }
 
 .master__aboutContent {
-  margin-top: 20px;
+  margin: 20px 0 20px;
+  width: 100%;
 }
 
 .master__specialization {
   margin-top: 20px;
+  width: 100%;
 }
 
 .specialization__area {
