--- a/src/assets/css/apps.css
+++ b/src/assets/css/apps.css
@@ -64,6 +64,12 @@
 @import "__master.css";
 @import "__master_media.css";
 
+@import "__master4.css";
+@import "__master4_media.css";
+
+@import "__imgCaroucel.css";
+@import "__imgCaroucel_media.css";
+
 @import "__brands.css";
 @import "__brands_media.css";
 
