--- a/src/__header3.pug
+++ b/src/__header3.pug
@@ -34,9 +34,12 @@ mixin header3
   .header3__fake
   .header3__area
     header.header3
-      .header3__logo
-        a(href="#")
-          img(src="assets/img/logo-1.svg", alt="Центр косметологии и красоты Бьюти Лаунж")
+      .header3__logoAndMbMenu
+        .header3__hamburger.leftSlideMenu_js
+          i.icon-hamburger1
+        .header3__logo
+          a(href="#")
+            img(src="assets/img/logo-1.svg", alt="Центр косметологии и красоты Бьюти Лаунж")
       a.solution3__btn(href="#") Решить проблему
       ul.topMenu3 
         li.active
@@ -67,15 +70,15 @@ mixin header3
       .eShop__headerIcon
         a.eShop__headerFav.topSearch_JS(href="")
           i.icon-search2
-        //- a.eShop__headerFav(href="")
-        //-   i.icon-eheart1.hederIconNoFav
-        //-   i.icon-eheart1.hederIconInFav
-        //- a.header__cart(href="")
-        //-   i.icon-shopping-cart
-        //-   span 12
+        a.eShop__headerFav(href="")
+          i.icon-eheart1.hederIconNoFav
+          i.icon-eheart1.hederIconInFav
+        a.header__cart(href="")
+          i.icon-shopping-cart
+          span 12
         
         //- .header3__menuBtn.header2__menuBtn_js(data-id="menu1")
-        .header3__menuBtn.leftSlideMenu_js(data-id="menu1")
+        //- .header3__menuBtn.leftSlideMenu_js(data-id="menu1")
           i.icon-emenu1
         
 
