--- a/src/assets/css/__breadcrumbs.css
+++ b/src/assets/css/__breadcrumbs.css
@@ -104,6 +104,14 @@
   margin-left: auto;
 }
 
+.backBtn4__outer {
+  /* display: none; */
+  /* margin-right: auto; */
+  border-right: 1px solid #bdbdbd;
+  padding: 0 15px 0 0;
+  margin: 0 15px 0 0;
+}
+
 .backBtn3__outer_inLeft {
   margin: 0;
   height: 100%;
