--- a/src/assets/css/__forms.css
+++ b/src/assets/css/__forms.css
@@ -742,6 +742,14 @@ input.work_email4 {
   flex-direction: column;
 }
 
+.mf3__intro h2 {
+  margin: 0 0 20px 0;
+  font-weight: bold;
+  font-size: 32px;
+  line-height: 1.3;
+  color: #4f4f4f;
+}
+
 .mf3__intro span {
   font-size: 1rem;
   line-height: 1.4;
@@ -765,6 +773,8 @@ input.work_email4 {
   flex-direction: column;
   justify-content: space-between;
   flex-wrap: wrap;
+  width: 100%;
+  max-width: 380px;
 }
 
 .mf3 label {
@@ -777,13 +787,17 @@ input.work_email4 {
 .mf3 input {
   font-family: "Open Sans", sans-serif;
   font-size: 0.875rem;
-  border: 1px solid #bdbdbd;
+  border: 2px solid #bdbdbd;
   line-height: 2.875rem;
   padding: 0 10px;
   outline: none;
   width: 100%;
   box-sizing: border-box;
   margin-bottom: 20px;
+}
+
+.mf3 input:focus {
+  border: 2px solid #5d4b62;
 }
 
 input.work_email_mf3 {
@@ -797,12 +811,10 @@ input.work_email_mf3 {
   display: flex;
   align-items: center;
   justify-content: center;
-  font-weight: 600;
-  font-size: 1rem;
-  line-height: 1.25rem;
   color: #fff;
   background: var(--brick);
   padding: 0.75rem 2rem;
+  height: 56px;
   border-radius: 6px;
   text-decoration: none;
   border: none;
@@ -811,6 +823,19 @@ input.work_email_mf3 {
 
 .submit_mf3:hover {
   background: var(--reden);
+}
+
+.submit_mf3 i {
+  font-size: 20px;
+  margin: 0 20px 0 0;
+}
+
+.submit_mf3 span {
+  text-transform: uppercase;
+  font-weight: bold;
+  font-size: 14px;
+  line-height: 20px;
+  color: #ffffff;
 }
 
 .form_mf3alrightBox {
@@ -826,7 +851,7 @@ input.work_email_mf3 {
   padding: 0;
   outline: none;
   width: auto;
-  margin-bottom: 0;
+  margin: 0;
 }
 
 .form_mf3alrightBox span {
