--- a/src/assets/css/__header3.css
+++ b/src/assets/css/__header3.css
@@ -141,6 +141,11 @@ a.authorized {
   justify-content: space-between;
 }
 
+.header3__logoAndMbMenu {
+  display: flex;
+  align-items: center;
+}
+
 .header3__logo {
   width: 102px;
 }
@@ -150,6 +155,17 @@ a.authorized {
 .header3__logo img {
   width: 100%;
   display: block;
+}
+
+.header3__hamburger {
+  position: relative;
+  cursor: pointer;
+  display: none;
+  margin: 0 20px 0 0;
+}
+
+.header3__hamburger i {
+  font-size: 24px;
 }
 
 .solution3__btn {
@@ -311,7 +327,11 @@ a.authorized {
   text-decoration: none;
   font-size: 24px;
   color: #4f4f4f;
-  /* margin: 0 20px 0 0; */
+  margin: 0 0 0 20px;
+}
+
+.eShop__headerFav:first-child {
+  margin: 0;
 }
 
 .eShop__headerFav:hover {
@@ -331,7 +351,7 @@ a.authorized {
   font-size: 24px;
   color: #4f4f4f;
   position: relative;
-  margin: 0 10px 0 0;
+  margin: 0 10px 0 20px;
 }
 
 .header__cart:hover {
