--- a/src/assets/css/fonts.css
+++ b/src/assets/css/fonts.css
@@ -1,9 +1,9 @@
 @font-face {
   font-family: "icomoon";
-  src: url("../fonts/icomoon.eot?cy8f4p");
-  src: url("../fonts/icomoon.eot?cy8f4p#iefix") format("embedded-opentype"),
-    url("../fonts/icomoon.ttf?cy8f4p") format("truetype"), url("../fonts/icomoon.woff?cy8f4p") format("woff"),
-    url("../fonts/icomoon.svg?cy8f4p#icomoon") format("svg");
+  src: url("../fonts/icomoon.eot?amh3hg");
+  src: url("../fonts/icomoon.eot?amh3hg#iefix") format("embedded-opentype"),
+    url("../fonts/icomoon.ttf?amh3hg") format("truetype"), url("../fonts/icomoon.woff?amh3hg") format("woff"),
+    url("../fonts/icomoon.svg?amh3hg#icomoon") format("svg");
   font-weight: normal;
   font-style: normal;
   font-display: block;
@@ -25,6 +25,12 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+.icon-diamond:before {
+  content: "\e974";
+}
+.icon-hamburger1:before {
+  content: "\e975";
+}
 .icon-calculator:before {
   content: "\e95f";
 }
