--- a/src/__master4.pug
+++ b/src/__master4.pug
@@ -251,3 +251,34 @@ mixin imgCaroucel1
       .swiper-pagination.imgCaroucel__pagination.imgCaroucel1__pagination
 
 
+
+mixin portfolio
+  .portfolio__area
+    .portfolio__outer
+      .title
+        h2 Портфолио
+      .portfolio
+        .portfolio__item
+          a(href='assets/img/portfolio/01.jpg', data-fancybox='group', data-caption='002')
+            img(src='assets/img/portfolio/01.jpg', alt='1')
+        .portfolio__item
+          a(href='assets/img/portfolio/02.jpg', data-fancybox='group', data-caption='002')
+            img(src='assets/img/portfolio/02.jpg', alt='1')
+        .portfolio__item
+          a(href='assets/img/portfolio/03.jpg', data-fancybox='group', data-caption='002')
+            img(src='assets/img/portfolio/03.jpg', alt='1')
+        .portfolio__item
+          a(href='assets/img/portfolio/04.jpg', data-fancybox='group', data-caption='002')
+            img(src='assets/img/portfolio/04.jpg', alt='1')
+        .portfolio__item
+          a(href='assets/img/portfolio/01.jpg', data-fancybox='group', data-caption='002')
+            img(src='assets/img/portfolio/01.jpg', alt='1')
+        .portfolio__item
+          a(href='assets/img/portfolio/02.jpg', data-fancybox='group', data-caption='002')
+            img(src='assets/img/portfolio/02.jpg', alt='1')
+        .portfolio__item
+          a(href='assets/img/portfolio/03.jpg', data-fancybox='group', data-caption='002')
+            img(src='assets/img/portfolio/03.jpg', alt='1')
+        .portfolio__item
+          a(href='assets/img/portfolio/04.jpg', data-fancybox='group', data-caption='002')
+            img(src='assets/img/portfolio/04.jpg', alt='1')
