--- a/src/master4.pug
+++ b/src/master4.pug
@@ -8,11 +8,14 @@ include __menu
 include __breadcrumbs
 include __wideBlock
 include __eShopMenu
+include __eShopSlideLeftMenu
 
 include __master4
 
 include __forms
 include __footer
+include __menuBottom1
+include __mainTop
 
 
 
@@ -43,11 +46,17 @@ body
 
 
   .site__footer
-    +footer
+    +footer3
 
 
   +topMenuAdaptive
   +search1
+
+  +leftSlideMenu
+  +menuBottom1_page
+  +hideBox2
+
+  +masterWindowForm
 
   +toUp
   
