--- a/src/assets/css/__forms_media.css
+++ b/src/assets/css/__forms_media.css
@@ -26,7 +26,10 @@
   }
 }
 
-@media only screen and (max-width: 800px) {
+@media only screen and (max-width: 820px) {
+  .mf3__intro h2 {
+    font-size: 28px;
+  }
 }
 
 @media only screen and (max-width: 768px) {
@@ -69,6 +72,47 @@
   }
 }
 
+@media only screen and (min-width: 600px) {
+  .mf3 input::-webkit-input-placeholder {
+    /* WebKit browsers */
+    color: transparent;
+  }
+  .mf3 input:-moz-placeholder {
+    /* Mozilla Firefox 4 to 18 */
+    color: transparent;
+  }
+  .mf3 input::-moz-placeholder {
+    /* Mozilla Firefox 19+ */
+    color: transparent;
+  }
+  .mf3 input:-ms-input-placeholder {
+    /* Internet Explorer 10+ */
+    color: transparent;
+  }
+  .mf3 input::placeholder {
+    color: transparent;
+  }
+  .mf3 textarea::-webkit-input-placeholder {
+    /* WebKit browsers */
+    color: transparent;
+  }
+  .mf3 textarea:-moz-placeholder {
+    /* Mozilla Firefox 4 to 18 */
+    color: transparent;
+  }
+  .mf3 textarea::-moz-placeholder {
+    /* Mozilla Firefox 19+ */
+    color: transparent;
+  }
+  .mf3 textarea:-ms-input-placeholder {
+    /* Internet Explorer 10+ */
+    color: transparent;
+  }
+  .mf3 textarea::placeholder {
+    color: transparent;
+  }
+}
+
 @media only screen and (max-width: 600px) {
   .zBlock3__left {
     display: none;
@@ -80,6 +124,25 @@
   }
   .zBlock3__intro h2 {
     margin: 0 0 10px;
+  }
+  .mf3__intro h2 {
+    margin: 0 0 10px 0;
+    font-size: 18px;
+  }
+  .mf3__intro {
+    margin-bottom: 10px;
+  }
+  .mf3 label {
+    /* font-size: 12px;
+    margin-bottom: 5px; */
+    display: none;
+  }
+  .mf3 > input {
+    line-height: 2.5;
+    margin-bottom: 10px;
+  }
+  .submit_mf3 {
+    height: auto;
   }
 }
 
@@ -100,13 +163,46 @@
   .mainForm3__left {
     width: 100%;
   }
+  .mf3__intro h2 {
+    margin: 0 0 5px 0;
+  }
+  .mf3__intro span {
+    font-size: 14px;
+    line-height: 1.3;
+  }
+
+  .mf3__intro a {
+    font-size: 14px;
+    line-height: 1.3;
+  }
+  .mf3__intro {
+    margin: 0;
+  }
+  .form_mf3alrightBox {
+    margin-bottom: 10px;
+  }
 }
 
 @media only screen and (max-width: 414px) {
   .zBlock3__right {
     padding: 0 20px 0 20px;
   }
+  .masterWindowForm {
+    padding: 15px 20px;
+  }
 }
 
 @media only screen and (max-width: 320px) {
+  .mf3__intro h2 {
+    margin: 0 0 5px 0;
+    font-size: 16px;
+  }
+  .mf3 > input {
+    line-height: 2.25;
+    margin-bottom: 5px;
+  }
+  .form_mf3alrightBox span {
+    font-size: 12px;
+    line-height: 1.1;
+  }
 }
