--- a/src/assets/css/__imgCaroucel.css
+++ b/src/assets/css/__imgCaroucel.css
@@ -17,7 +17,6 @@
   display: flex;
   justify-content: center;
   flex-direction: column;
-  padding: 0 10px;
 }
 
 .imgCaroucel {
@@ -50,11 +49,17 @@
   height: 100%;
   display: flex;
   align-items: center;
+  transition: all 0.3s;
 }
 
 .imgCaroucel-slide a img {
   display: block;
   width: 100%;
+  transition: all 0.3s;
+}
+
+.imgCaroucel a:hover img {
+  box-shadow: 0px 10px 20px rgba(196, 187, 234, 0.45);
 }
 
 .imgCaroucel__left,
