--- a/src/assets/css/__master_media.css
+++ b/src/assets/css/__master_media.css
@@ -86,6 +86,13 @@
     order: 3;
     margin-top: 10px;
   }
+  .specialization {
+    padding: 7px 20px;
+    margin: 3px;
+    font-weight: 600;
+    font-size: 14px;
+    line-height: 18px;
+  }
 }
 
 @media only screen and (max-width: 400px) {
