--- a/src/assets/css/fonts.css
+++ b/src/assets/css/fonts.css
@@ -1,9 +1,9 @@
 @font-face {
   font-family: "icomoon";
-  src: url("../fonts/icomoon.eot?amh3hg");
-  src: url("../fonts/icomoon.eot?amh3hg#iefix") format("embedded-opentype"),
-    url("../fonts/icomoon.ttf?amh3hg") format("truetype"), url("../fonts/icomoon.woff?amh3hg") format("woff"),
-    url("../fonts/icomoon.svg?amh3hg#icomoon") format("svg");
+  src: url("../fonts/icomoon.eot?tzwo85");
+  src: url("../fonts/icomoon.eot?tzwo85#iefix") format("embedded-opentype"),
+    url("../fonts/icomoon.ttf?tzwo85") format("truetype"), url("../fonts/icomoon.woff?tzwo85") format("woff"),
+    url("../fonts/icomoon.svg?tzwo85#icomoon") format("svg");
   font-weight: normal;
   font-style: normal;
   font-display: block;
@@ -25,6 +25,15 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+.icon-loading:before {
+  content: "\e942";
+}
+.icon-refresh:before {
+  content: "\e943";
+}
+.icon-refresh2:before {
+  content: "\e958";
+}
 .icon-diamond:before {
   content: "\e974";
 }
@@ -308,12 +317,6 @@
 .icon-qrcode:before {
   content: "\e93f";
 }
-.icon-connection:before {
-  content: "\e942";
-}
-.icon-credit-card:before {
-  content: "\e943";
-}
 .icon-phone2:before {
   content: "\e944";
 }
@@ -323,65 +326,17 @@
 .icon-fire:before {
   content: "\e9a9";
 }
-.icon-accessibility:before {
-  content: "\e9b2";
-}
-.icon-sun:before {
-  content: "\e9d4";
-}
-.icon-contrast:before {
-  content: "\e9d5";
-}
-.icon-brightness-contrast:before {
-  content: "\e9d6";
-}
-.icon-star-empty:before {
-  content: "\e9d7";
-}
-.icon-star-half:before {
-  content: "\e9d8";
-}
-.icon-star-full:before {
-  content: "\e9d9";
-}
-.icon-smile1:before {
-  content: "\e9e1";
-}
-.icon-smile2:before {
-  content: "\e9e2";
-}
-.icon-sad:before {
-  content: "\e9e5";
-}
-.icon-sad2:before {
-  content: "\e9e6";
-}
-.icon-warning:before {
-  content: "\ea07";
-}
 .icon-enter:before {
   content: "\ea13";
 }
 .icon-exit1:before {
   content: "\ea14";
 }
-.icon-move-up:before {
-  content: "\ea46";
-}
-.icon-move-down:before {
-  content: "\ea47";
-}
 .icon-sort-alpha-asc:before {
   content: "\ea48";
 }
 .icon-sort-alpha-desc:before {
   content: "\ea49";
-}
-.icon-sort-amount-asc:before {
-  content: "\ea4c";
-}
-.icon-sort-amount-desc:before {
-  content: "\ea4d";
 }
 .icon-chevron-down:before {
   content: "\e93a";
@@ -443,36 +398,6 @@
 .icon-youtube:before {
   content: "\ea9d";
 }
-.icon-youtube2:before {
-  content: "\ea9e";
-}
-.icon-mobile:before {
-  content: "\e958";
-}
-.icon-tree:before {
-  content: "\e9bc";
-}
-.icon-man:before {
-  content: "\e9dc";
-}
-.icon-woman:before {
-  content: "\e9dd";
-}
-.icon-man-woman:before {
-  content: "\e9de";
-}
-.icon-first:before {
-  content: "\ea21";
-}
-.icon-last:before {
-  content: "\ea22";
-}
-.icon-previous2:before {
-  content: "\ea23";
-}
-.icon-next21:before {
-  content: "\ea24";
-}
 .icon-arrow-up2:before {
   content: "\ea3a";
 }
@@ -496,7 +421,4 @@
 }
 .icon-circle-left:before {
   content: "\ea44";
-}
-.icon-scissors:before {
-  content: "\ea5a";
 }
