--- a/src/__master4.pug
+++ b/src/__master4.pug
@@ -264,30 +264,31 @@ mixin portfolio
       .title
         h2 Портфолио
       .portfolio
-        .portfolio__item
-          a(href='assets/img/portfolio/01.jpg', data-fancybox='group', data-caption='002')
-            img(src='assets/img/portfolio/01.jpg', alt='1')
-        .portfolio__item
-          a(href='assets/img/portfolio/02.jpg', data-fancybox='group', data-caption='002')
-            img(src='assets/img/portfolio/02.jpg', alt='1')
-        .portfolio__item
-          a(href='assets/img/portfolio/03.jpg', data-fancybox='group', data-caption='002')
-            img(src='assets/img/portfolio/03.jpg', alt='1')
-        .portfolio__item
-          a(href='assets/img/portfolio/04.jpg', data-fancybox='group', data-caption='002')
-            img(src='assets/img/portfolio/04.jpg', alt='1')
-        .portfolio__item
-          a(href='assets/img/portfolio/01.jpg', data-fancybox='group', data-caption='002')
-            img(src='assets/img/portfolio/01.jpg', alt='1')
-        .portfolio__item
-          a(href='assets/img/portfolio/02.jpg', data-fancybox='group', data-caption='002')
-            img(src='assets/img/portfolio/02.jpg', alt='1')
-        .portfolio__item
-          a(href='assets/img/portfolio/03.jpg', data-fancybox='group', data-caption='002')
-            img(src='assets/img/portfolio/03.jpg', alt='1')
-        .portfolio__item
-          a(href='assets/img/portfolio/04.jpg', data-fancybox='group', data-caption='002')
-            img(src='assets/img/portfolio/04.jpg', alt='1')
+        .rows 
+          .portfolio__item
+            a(href='assets/img/portfolio/01.jpg', data-fancybox='group', data-caption='002')
+              img(src='assets/img/portfolio/01.jpg', alt='1')
+          .portfolio__item
+            a(href='assets/img/portfolio/02.jpg', data-fancybox='group', data-caption='002')
+              img(src='assets/img/portfolio/02.jpg', alt='1')
+          .portfolio__item
+            a(href='assets/img/portfolio/03.jpg', data-fancybox='group', data-caption='002')
+              img(src='assets/img/portfolio/03.jpg', alt='1')
+          .portfolio__item
+            a(href='assets/img/portfolio/04.jpg', data-fancybox='group', data-caption='002')
+              img(src='assets/img/portfolio/04.jpg', alt='1')
+          .portfolio__item
+            a(href='assets/img/portfolio/01.jpg', data-fancybox='group', data-caption='002')
+              img(src='assets/img/portfolio/01.jpg', alt='1')
+          .portfolio__item
+            a(href='assets/img/portfolio/02.jpg', data-fancybox='group', data-caption='002')
+              img(src='assets/img/portfolio/02.jpg', alt='1')
+          .portfolio__item
+            a(href='assets/img/portfolio/03.jpg', data-fancybox='group', data-caption='002')
+              img(src='assets/img/portfolio/03.jpg', alt='1')
+          .portfolio__item
+            a(href='assets/img/portfolio/04.jpg', data-fancybox='group', data-caption='002')
+              img(src='assets/img/portfolio/04.jpg', alt='1')
       .portfolio__more
         i.icon-refresh2
         span показать еще
