--- a/src/assets/css/__master4.css
+++ b/src/assets/css/__master4.css
@@ -1,5 +1,6 @@
 .flexBox__area {
   width: 100%;
+  margin: 0 0 20px 0;
 }
 
 .flexBox__outer {
@@ -106,16 +107,20 @@
 .portfolio__outer {
   width: 100%;
   max-width: 1200px;
-  margin: 0 auto;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+  margin: 35px auto 0;
 }
 
 .portfolio {
   display: flex;
-  flex-wrap: wrap;
+  flex-direction: column;
+  align-items: center;
   margin: 0 -10px;
+}
+
+.portfolio .rows {
+  display: flex;
+  flex-wrap: wrap;
+  width: 100%;
 }
 
 .portfolio__item {
@@ -141,7 +146,7 @@
 
 .portfolio__more {
   display: flex;
-  margin: 40px auto 50px;
+  margin: 40px auto 25px;
   cursor: pointer;
   align-items: center;
 }
