--- a/src/eShopCabinet.pug
+++ b/src/eShopCabinet.pug
@@ -7,7 +7,7 @@ include __header3
 include __menu
 include __eShopCabinet
 include __pagination
-include __mainTop
+include __mainTop4
 include __mainProblem
 include __breadcrumbs
 include __eShopCartPage
