--- a/src/index_030621.pug
+++ b/src/index_030621.pug
@@ -7,7 +7,7 @@ include __header
 //- include __header2
 include __header3
 include __menu
-include __mainTop4
+include __mainTop
 include __card
 include __mainProblem
 include __slider1
@@ -33,7 +33,7 @@ html(lang="ru-RU")
       +header3
 
     .site__center
-      +mainTop4
+      +mainTop
       .wideBox3__area 
         .wideBox3
           .title3
