--- a/src/assets/css/__header3.css
+++ b/src/assets/css/__header3.css
@@ -51,8 +51,9 @@
 
 .topLine3__sLinkItem {
   text-decoration: none;
-  display: inline-block;
   margin: 0 30px 0 0;
+  display: flex;
+  align-items: center;
 }
 .topLine3__sLinkItem:last-child {
   margin: 0;
@@ -82,9 +83,9 @@
 
 .topLineMenu li a {
   /* font-weight: 600; */
-  /* font-size: 0.75rem; */
-  font-size: 0.875rem;
-  line-height: 1rem;
+  font-size: 0.75rem;
+  /* font-size: 0.875rem; */
+  line-height: 1;
   color: #fff;
   text-decoration: none;
 }
@@ -173,7 +174,7 @@ a.authorized {
   align-items: center;
   justify-content: center;
   font-weight: 600;
-  /* font-size: 0.875rem; */
+  font-size: 0.875rem;
   line-height: 1.25rem;
   color: #fff;
   background: var(--brick);
@@ -204,7 +205,7 @@ a.authorized {
 .topMenu3 > li a {
   text-decoration: none;
   font-weight: 600;
-  /* font-size: 0.875rem; */
+  font-size: 0.875rem;
   color: #4f4f4f;
   line-height: 4.5rem;
   position: relative;
