--- a/src/assets/fonts/demo/style.css
+++ b/src/assets/fonts/demo/style.css
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'icomoon';
-  src:  url('fonts/icomoon.eot?tzwo85');
-  src:  url('fonts/icomoon.eot?tzwo85#iefix') format('embedded-opentype'),
-    url('fonts/icomoon.ttf?tzwo85') format('truetype'),
-    url('fonts/icomoon.woff?tzwo85') format('woff'),
-    url('fonts/icomoon.svg?tzwo85#icomoon') format('svg');
+  src:  url('fonts/icomoon.eot?3rk5f3');
+  src:  url('fonts/icomoon.eot?3rk5f3#iefix') format('embedded-opentype'),
+    url('fonts/icomoon.ttf?3rk5f3') format('truetype'),
+    url('fonts/icomoon.woff?3rk5f3') format('woff'),
+    url('fonts/icomoon.svg?3rk5f3#icomoon') format('svg');
   font-weight: normal;
   font-style: normal;
   font-display: block;
@@ -25,6 +25,15 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+.icon-paste:before {
+  content: "\e976";
+}
+.icon-sad:before {
+  content: "\e977";
+}
+.icon-telephone:before {
+  content: "\e978";
+}
 .icon-loading:before {
   content: "\e942";
 }
