--- a/src/__eShopCabinet.pug
+++ b/src/__eShopCabinet.pug
@@ -10,7 +10,7 @@ mixin cabinet2
         ul.cab2__tabs
           li.cab2__tab
             a.cab2__tabTitle.active(href='#')
-              i.icon-clipboard
+              i.icon-calculator
               span Мои заказы
             section.open
               +order2
