--- a/src/assets/css/__eShopCabinet_media.css
+++ b/src/assets/css/__eShopCabinet_media.css
@@ -63,7 +63,7 @@
     margin-bottom: 20px;
   }
   .order2Date {
-    margin: 0;
+    margin: 0 0 5px 0;
   }
   .order2Price {
     margin-left: auto;
@@ -115,9 +115,6 @@
   /* .order2Thumbs__itemArea {
     width: 25%;
   } */
-  .order2Title {
-    margin-bottom: 5px;
-  }
   .order2Id {
     margin-bottom: 5px;
   }
@@ -130,6 +127,18 @@
 
   .profile2__rowContentCorect i {
     display: block;
+  }
+  .order2Date {
+    font-size: 0.75rem;
+  }
+  .order2Price {
+    font-size: 1.25rem;
+  }
+  .order2Id {
+    font-size: 0.75rem;
+  }
+  .order2Status {
+    font-size: 0.875rem;
   }
 }
 
