--- a/src/assets/css/apps.css
+++ b/src/assets/css/apps.css
@@ -108,6 +108,9 @@
 /* @import "__index2.css"; */
 @import "__index2_media.css";
 
+@import "__mainTop2.css";
+@import "__mainTop2_media.css";
+
 @import "__mainTop4.css";
 @import "__mainTop4_media.css";
 
