--- a/src/assets/css/__footer3.css
+++ b/src/assets/css/__footer3.css
@@ -34,6 +34,9 @@
   color: #fff;
   margin-bottom: 2.5rem;
 }
+.footer3__tm:first-child {
+  margin-bottom: 10px;
+}
 
 .footer3b {
   display: flex;
