--- a/src/__header3.pug
+++ b/src/__header3.pug
@@ -39,7 +39,7 @@ mixin header3
           i.icon-hamburger1
         .header3__logo
           a(href="#")
-            img(src="assets/img/logo-1.svg", alt="Центр косметологии и красоты Бьюти Лаунж")
+            img(src="assets/img/logo-1-fff.svg", alt="Центр косметологии и красоты Бьюти Лаунж")
       a.solution3__btn(href="#") Решить проблему
       ul.topMenu3 
         li.active
