--- a/src/__mainTop4.pug
+++ b/src/__mainTop4.pug
@@ -15,7 +15,7 @@ mixin mainTop4
               .mainTop4__menuItemWrapper
                 a.mainTop4__menuItem.mainTop4__menuItem_js.colorBox_a(href="#", data-id="menu3")
                   .mainTop4__menuItemTop
-                    .mainTop4__menuItemTitle Решить проблему
+                    .mainTop4__menuItemTitle Решение проблем
                     i.icon-question-round
                   .mainTop4__menuItemBottom Современное решение косметологических проблем
             .mainTop4__menuItemOuter.mainTop4__menuItemOuter_b
