--- a/src/assets/css/__card_media.css
+++ b/src/assets/css/__card_media.css
@@ -188,14 +188,25 @@
   .eCard__itemTitle {
     font-size: 14px;
     line-height: 1.2;
+    letter-spacing: 0.02em;
+    text-transform: uppercase;
+    font-weight: normal;
   }
   .eCard__itemContent p {
-    font-size: 11px;
+    font-size: 12px;
     margin-bottom: 5px;
     line-height: 1.2;
   }
+  .eCard__itemContent ul {
+    padding: 0;
+  }
   .eCard__itemContent li {
-    font-size: 11px;
+    font-style: normal;
+    font-weight: 300;
+    font-size: 10px;
+    line-height: 14px;
+    letter-spacing: 0.04em;
+    color: #000;
   }
   .innerPriceBox3__title {
     font-size: 18px;
