--- a/src/assets/css/__menuBottom1.css
+++ b/src/assets/css/__menuBottom1.css
@@ -30,18 +30,25 @@
 
 .menuBottom1__outer {
   position: relative;
+  padding: 5px;
 }
 
 .menuBottom1 {
   display: flex;
   justify-content: space-between;
-  -webkit-border-top-left-radius: 4px;
+  /* -webkit-border-top-left-radius: 4px;
   -webkit-border-top-right-radius: 4px;
   -moz-border-radius-topleft: 4px;
   -moz-border-radius-topright: 4px;
   border-top-left-radius: 4px;
-  border-top-right-radius: 4px;
+  border-top-right-radius: 4px; */
   overflow: hidden;
+  border-radius: 4px;
+
+  background: linear-gradient(180deg, rgba(255, 255, 255, 0) 0%, #f0f0f0 100%),
+    #ffffff;
+  border: 1px solid #ffffff;
+  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
 }
 
 .menuBottom1__itemArea {
@@ -60,6 +67,27 @@
   padding: 10px 5px 10px;
   text-decoration: none;
   cursor: pointer;
+  position: relative;
+}
+
+.menuBottom1__item:before {
+  content: "";
+  position: absolute;
+  left: 0;
+  top: 15%;
+  height: 70%;
+  background: #efefef;
+  width: 1px;
+}
+
+.menuBottom1__item:after {
+  content: "";
+  position: absolute;
+  right: 0;
+  top: 15%;
+  height: 70%;
+  background: #efefef;
+  width: 1px;
 }
 
 .menuBottom1__item i {
@@ -71,48 +99,66 @@
   line-height: 1;
   margin-top: auto;
   text-align: center;
-  letter-spacing: 0.08em;
+  /* letter-spacing: 0.08em; */
   font-weight: 400;
+  text-transform: uppercase;
 }
 
-.mColor1 {
-  /* background: #aba299; */
+/* .mColor1 {
+  background: linear-gradient(180deg, rgba(255, 255, 255, 0) 0%, #f0f0f0 100%),
+    #ffffff;
+  color: #5d4b63;
+}
+.mColor2 {
+  background: linear-gradient(180deg, rgba(255, 255, 255, 0) 0%, #f0f0f0 100%),
+    #ffffff;
+  color: #5d4b63;
+}
+.mColor3 {
+  background: linear-gradient(180deg, rgba(255, 255, 255, 0) 0%, #f0f0f0 100%),
+    #ffffff;
+  color: #5d4b63;
+}
+.mColor4 {
+  background: linear-gradient(180deg, rgba(255, 255, 255, 0) 0%, #f0f0f0 100%),
+    #ffffff;
+  color: #5d4b63;
+}
+.mColor5 {
+  background: linear-gradient(180deg, rgba(255, 255, 255, 0) 0%, #f0f0f0 100%),
+    #ffffff;
+  color: #5d4b63;
+} */
+
+/* .mColor1 {
   background: #cecbda;
   color: #fff;
-
-  background: linear-gradient(180deg, rgba(255, 255, 255, 0) 0%, #f0f0f0 100%), #ffffff;
-  color: #5d4b63;
 }
 .mColor2 {
   background: #d74d63;
   color: #fff;
-
-  /* background: #f6e5e4;
-  color: #4f4f4f; */
-
-  background: linear-gradient(180deg, rgba(255, 255, 255, 0) 0%, #f0f0f0 100%), #ffffff;
-  color: #5d4b63;
 }
 .mColor3 {
-  /* background: #a49693; */
   background: #5d4b63;
   color: #fff;
-
-  background: linear-gradient(180deg, rgba(255, 255, 255, 0) 0%, #f0f0f0 100%), #ffffff;
-  color: #5d4b63;
 }
 .mColor4 {
   background: #3a2f29;
   color: #fff;
-
-  background: linear-gradient(180deg, rgba(255, 255, 255, 0) 0%, #f0f0f0 100%), #ffffff;
-  color: #5d4b63;
 }
 .mColor5 {
-  /* background: #c24b35; */
   background: #a38182;
   color: #fff;
+} */
 
-  background: linear-gradient(180deg, rgba(255, 255, 255, 0) 0%, #f0f0f0 100%), #ffffff;
-  color: #5d4b63;
+.mColor1,
+.mColor2,
+.mColor3,
+.mColor4,
+.mColor5 {
+  color: #000;
+}
+
+.mColor5 i {
+  color: #7e4b61;
 }
