--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -1,7 +1,8 @@
 html,
 body {
   color: #000;
-  font-family: "Open Sans", sans-serif;
+  /* font-family: "Open Sans", sans-serif; */
+  font-family: "Roboto Condensed", sans-serif;
   font-size: 16px;
   font-weight: 400;
   line-height: 1.2;
