--- a/src/eShopCatalogFloat.pug
+++ b/src/eShopCatalogFloat.pug
@@ -8,12 +8,12 @@ include __header3
 include __menu
 include __eShopMenu
 include __eShopCatalogFloat
-include __eShopSlideLeftMenu
+
 include __eFilter
-include __eFilterMobile
+
 include __pagination
 include __eFilter
-include __mainTop
+
 include __mainProblem
 include __breadcrumbs
 include __wideBlock
@@ -21,7 +21,9 @@ include __services
 include __forms
 
 include __footer
-include __menuBottom1
+
+
+include __popUpBlocks
 
 
 
@@ -90,21 +92,16 @@ body
     +footer3
 
 
-  +topMenuAdaptive
+  //- +topMenuAdaptive
   +search1
-
-  +leftSlideMenu
 
   +toUp
   
-  +formCallBack
 
-  +menuBottom1_page
 
-  //- далее вывод не на главной
-  +hideBox2
+  +popUpBlocks
 
-  +eFilerMobile
+
 
   +scripts
   
