--- a/src/index.pug
+++ b/src/index.pug
@@ -18,10 +18,10 @@ include __news
 include __newsInMain
 include __forms
 include __footer
-include __menuBottom1
-include __callback
+//- include __menuBottom1
+//- include __callback
 
-
+include __popUpBlocks
 
 
 <!DOCTYPE html>
@@ -56,14 +56,11 @@ html(lang="ru-RU")
 
     +toUp
 
-    +formCallBack
+    //- +formCallBack
 
     +formConsInMain
 
-    +menuBottom1_main
-    +hideBox
-
-    +callback
+    +popUpBlocks
     
     +scripts
     
