--- a/src/textPage.pug
+++ b/src/textPage.pug
@@ -3,7 +3,7 @@
 - var seoDesc = 'Сео описание для страницы'
 
 include __const
-include __header
+include __header3
 include __menu
 include __breadcrumbs
 include __wideBlock
@@ -22,8 +22,8 @@ html(lang="ru-RU")
 body
 
   .site__header
-    +header
-    +topMenu
+    +header3
+    //- +topMenu
 
 
   .site__center
@@ -56,7 +56,7 @@ body
     +zBlock1
 
   .site__footer
-    +footer
+    +footer3
 
 
   +topMenuAdaptive
